update with my info

--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -1,6 +1,6 @@
 %-------------------------
 % Resume in Latex
-% Author : Sourabh Bajaj
+% Author : Medad Newman
 % License : MIT
 %------------------------
 
@@ -93,8 +93,8 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\href{http://sourabhbajaj.com/}{\Large Sourabh Bajaj}} & Email : \href{mailto:sourabh@sourabhbajaj.com}{sourabh@sourabhbajaj.com}\\
-  \href{http://sourabhbajaj.com/}{http://www.sourabhbajaj.com} & Mobile : +1-123-456-7890 \\
+  \textbf{\href{https://medadnewman.co.uk/}{\Large Medad Newman}} & Email : \href{mailto:medad@medadnewman.co.uk}{medad@medadnewman.co.uk}\\
+  \href{https://medadnewman.co.uk/}{https://medadnewman.co.uk} & Mobile : +44 7435651280 \\
 \end{tabular*}
 
 
@@ -102,11 +102,14 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Georgia Institute of Technology}{Atlanta, GA}
-      {Master of Science in Computer Science;  GPA: 4.00}{Aug. 2012 -- Dec. 2013}
-    \resumeSubheading
-      {Birla Institute of Technology and Science}{Pilani, India}
-      {Bachelor of Engineering in Electrical and Electronics;  GPA: 3.66 (9.15/10.0)}{Aug. 2008 -- July. 2012}
+      {Imperial College London}{London, UK}
+      {Masters in Design Engineering;  2:1 grade}{Sep. 2017 -- June. 2021}
+      \resumeItemListStart
+        \resumeItem{Thesis}
+          {Thesis on predicting E-bike energy consumption with machine learning.}
+        \resumeItem{Subjects}
+          {Mechanics, Electronics, Algorithms, Optimisation, Robotics, Human-Centred Design, Industrial Design and Business Strategy.}
+      \resumeItemListEnd
   \resumeSubHeadingListEnd
 
 
@@ -115,67 +118,56 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Google}{Mountain View, CA}
-      {Software Engineer}{Oct 2016 - Present}
+      {Dyson}{Hullavington, United Kingdom}
+      {Graduate Software Engineer}{Feb 2022 - Present}
       \resumeItemListStart
-        \resumeItem{Tensorflow}
-          {TensorFlow is an open source software library for numerical computation using data flow graphs; primarily used for training deep learning models. Worked on APIs and performance for training models on Tensor Processing Units (TPU).}
-        \resumeItem{Apache Beam}
-          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines, as well as a set of language-specific SDKs for constructing pipelines and runners.}
+        \resumeItem{Bluetooth Low Energy}
+          {Bluetooth Low Energy(BLE) is a low power communication protocol for connected devices. I write software running on Dyson products that communicate over Bluetooth LE.}
       \resumeItemListEnd
-      
-% --------Multiple Positions Heading------------
-%    \resumeSubSubheading
-%     {Software Engineer I}{Oct 2014 - Sep 2016}
-%     \resumeItemListStart
-%        \resumeItem{Apache Beam}
-%          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
-%     \resumeItemListEnd
-%    \resumeSubHeadingListEnd
-%-------------------------------------------
-
+  
     \resumeSubheading
-      {Coursera}{Mountain View, CA}
-      {Senior Software Engineer}{Jan 2014 - Oct 2016}
+      {Ashburton Finance}{London, United Kingdom}
+      {Founder}{Sep 2021 - Nov 2021}
       \resumeItemListStart
-        \resumeItem{Notifications}
-          {Service for sending email, push and in-app notifications. Involved in features such as delivery time optimization, tracking, queuing and A/B testing. Built an internal app to run batch campaigns for marketing etc.}
-        \resumeItem{Nostos}
-          {Bulk data processing and injection service from Hadoop to Cassandra and provides a thin REST layer on top for serving offline computed data online.}
-        \resumeItem{Workflows}
-          {Dataduct an open source workflow framework to create and manage data pipelines leveraging reusables patterns to expedite developer productivity.}
-        \resumeItem{Data Collection}
-          {Designed the internal survey and crowd sourcing platform which allowed for creating various tasks for crowd sourcing or embedding surveys across the Coursera platform.}
-        \resumeItem{Dev Environment}
-          {Analytics environment based on docker and AWS, standardized the python and R dependencies. Wrote the core libraries that are shared by all data scientists.}
-        \resumeItem{Data Warehousing}
-          {Setup, schema design and management of Amazon Redshift. Built an internal app for access to the data using a web interface. Dataduct integration for daily ETL injection into Redshift.}
-        \resumeItem{Recommendations}
-          {Core service for all recommendation systems at Coursera, currently used on the homepage and throughout the content discovery process. Worked on both offline training and online serving.}
-        \resumeItem{Content Discovery}
-          {Improved content discovery by building a new onboarding experience on coursera. Using this to personalize the search and browse experience. Also worked on ranking and indexing improvements.}
-        \resumeItem{Course Dashboards}
-          {Instructor dashboards and learner surveying tools, which helped instructors run their class better by providing data on Assignments and Learner Activity.}
+        \resumeItem{Crypto Lending}
+          {Founded a venture for lending of cryptocurrencies. Moving on due to lack of
+          progress/path to profitablity.}
+        \resumeItem{Smart Contracts/Blockchain}
+          {Developed product on the Solana blockchain, using the latest tooling(Smart Contracts, Web3, Typescript/Rust programming, Anchor framework).}
+      \resumeItemListEnd
+  
+    \resumeSubheading
+      {Ion-O Tech}{London, United Kingdom}
+      {Embedded Hardware/Software Engineer Intern}{June 2021 - Sep 2021}
+      \resumeItemListStart
+        \resumeItem{Electric Bike Development}
+          {I worked with a team to develop a high performance, innovative electric bicycle.}
+        \resumeItem{PCB Design}
+          {I created an ESP32 based datalogger logging all relevant parameters from a moving E-bike. This required PCB design/board bring-up.}
+        \resumeItem{Data Visualisation}
+          {Created visualisation dashboards of performance data from the product using Influxdb/Grafana.}
+        \resumeItem{Embedded Software}
+          {I wrote the software for datalogger, running FreeRTOS for scheduling and interfacing with several sensors.}
+        \resumeItem{Battery Pack Design}
+          {Designed custom battery packs and tested their performance, especially thermal characteristics.}
+        \resumeItem{Energy Consumption Algorithms}
+          {Developed further algorithms for precisely predicting how much energy an electric bike will consume}
       \resumeItemListEnd
 
     \resumeSubheading
-      {Lucena Research}{Atlanta, GA}
-      {Data Scientist}{Summer 2012 and 2013}
+      {Onsee (formerly Pelation)}{London, United Kingdom}
+      {Design Engineer Intern}{May 2020 - Sep 2020}
       \resumeItemListStart
-        \resumeItem{Portfolio Management}
-          {Created models for portfolio hedging,  portfolio optimization and price forecasting. Also creating a strategy backtesting engine used for simulating and backtesting strategies.}
-        \resumeItem{QuantDesk}
-          {Python backend for a web application used by hedge fund managers for portfolio management.}
-      \resumeItemListEnd
-
-    \resumeSubheading
-      {Georgia Institute of Technology}{Atlanta, GA}
-      {Research and Teaching Assistant}{Jan 2012 - Dec 2013}
-      \resumeItemListStart
-        \resumeItem{Research Assistant - Machine Learning}
-          {Research on machine learning for portfolio hedging and replication algorithms. Modeling low-risk \& continuous-return strategies. Developed the python library QSTK.}
-        \resumeItem{Teaching Assistant - Computational Investing}
-          {The online course on Coursera, had more than 100,000 students enrolled. It was featured on the 11 Alive News and the Atlanta Journal Constitution. Involved in creating assignment, exams and conducting recitation sessions. Also taught the on-campus version of the course.}
+        \resumeItem{Rebo: Bike Camera}
+          {Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware for device and web interface(Django/Python).}
+        \resumeItem{Embedded Software}
+          {Wrote the software for the camera product, on 2 processors(Vision and Battery management). Code was written in C and in Python. Processors: Broadcom SoC and Attiny MCU.}
+        \resumeItem{Battery Management Algorithms}
+          {I wrote the algorithms for battery management, including State-of-Charge estimation, overvoltage/undervoltage protection, overcharge protection.}
+        \resumeItem{Data Visualisation}
+          {Created visualisation dashboards of data from the camera product that was deployed to the customer, for performance analysis and fault detection.}
+        \resumeItem{Video Processing}
+          {Created scripts to cut, splice and watermark videos captured on the camera.}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -184,26 +176,20 @@
 %-----------PROJECTS-----------------
 \section{Projects}
   \resumeSubHeadingListStart
-    \resumeSubItem{QuantSoftware Toolkit}
-      {Open source python library for financial data analysis and machine learning for finance.}
-    \resumeSubItem{Github Visualization}
-      {Data Visualization of Git Log data using D3 to analyze project trends over time.}
-    \resumeSubItem{Recommendation System}
-      {Music and Movie recommender systems using collaborative filtering on public datasets.}
-    \resumeSubItem{Mac Setup}
-      {Book that gives step by step instructions on setting up developer environment on Mac OS.}
+    \resumeSubItem{Round-the-world Balloon project}
+      {Led a team to fly a small hydrogen balloon around the world on the Jet stream. Longest flight was for 22 days, flying over Japan, Canada, America and Euro­pe. The tracker we designed was powered by solar, and transmited position fixes via radio(LoRaWAN) to gateways worldwide(launch report).}
   \resumeSubHeadingListEnd
 
-%
+
 %--------PROGRAMMING SKILLS------------
-%\section{Programming Skills}
-%  \resumeSubHeadingListStart
-%    \item{
-%      \textbf{Languages}{: Scala, Python, Javascript, C++, SQL, Java}
-%      \hfill
-%      \textbf{Technologies}{: AWS, Play, React, Kafka, GCE}
-%    }
-%  \resumeSubHeadingListEnd
+\section{Programming Skills}
+ \resumeSubHeadingListStart
+   \item{
+     \textbf{Languages}{: Python, C, C++, Java, Rust, Typescript}
+     \hfill
+     \textbf{Technologies}{: Docker, Git, Linux}
+   }
+ \resumeSubHeadingListEnd
 
 
 %-------------------------------------------
