--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -4,7 +4,7 @@
 % License : MIT
 %------------------------
 
-\documentclass[letterpaper,11pt]{article}
+\documentclass[a4paper,11pt]{article}
 
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
@@ -105,10 +105,10 @@
       {Imperial College London}{London, UK}
       {Masters in Design Engineering;  2:1 grade}{Sep. 2017 -- June. 2021}
       \resumeItemListStart
+        \resumeItem{Subjects}
+          {Mechanics, Electronics, Algorithms \& Data Structures, Optimisation, Robotics, Human-Centred Design, Industrial Design and Business Strategy.}
         \resumeItem{Thesis}
           {Thesis on predicting E-bike energy consumption with machine learning.}
-        \resumeItem{Subjects}
-          {Mechanics, Electronics, Algorithms, Optimisation, Robotics, Human-Centred Design, Industrial Design and Business Strategy.}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -118,7 +118,7 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Dyson}{Hullavington, United Kingdom}
+      {Dyson}{Hullavington, UK}
       {Graduate Software Engineer}{Feb 2022 - Present}
       \resumeItemListStart
         \resumeItem{Bluetooth Low Energy}
@@ -126,22 +126,21 @@
       \resumeItemListEnd
   
     \resumeSubheading
-      {Ashburton Finance}{London, United Kingdom}
+      {Ashburton Finance}{London, UK}
       {Founder}{Sep 2021 - Nov 2021}
       \resumeItemListStart
         \resumeItem{Crypto Lending}
-          {Founded a venture for lending of cryptocurrencies. Moving on due to lack of
-          progress/path to profitablity.}
+          {Founded a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers(\href{https://github.com/Ashburton-Finance/flash-aggregator}{Github})}
         \resumeItem{Smart Contracts/Blockchain}
-          {Developed product on the Solana blockchain, using the latest tooling(Smart Contracts, Web3, Typescript/Rust programming, Anchor framework).}
+          {Developed product on the Solana blockchain, using the latest tooling(Smart Contracts, Typescript/Rust programming, Anchor framework).}
       \resumeItemListEnd
   
     \resumeSubheading
-      {Ion-O Tech}{London, United Kingdom}
+      {Ion-O Tech}{London, UK}
       {Embedded Hardware/Software Engineer Intern}{June 2021 - Sep 2021}
       \resumeItemListStart
         \resumeItem{Electric Bike Development}
-          {I worked with a team to develop a high performance, innovative electric bicycle.}
+          {I worked in a team to develop a high performance, innovative electric bicycle.}
         \resumeItem{PCB Design}
           {I created an ESP32 based datalogger logging all relevant parameters from a moving E-bike. This required PCB design/board bring-up.}
         \resumeItem{Data Visualisation}
@@ -155,7 +154,7 @@
       \resumeItemListEnd
 
     \resumeSubheading
-      {Onsee (formerly Pelation)}{London, United Kingdom}
+      {Onsee (formerly Pelation)}{London, UK}
       {Design Engineer Intern}{May 2020 - Sep 2020}
       \resumeItemListStart
         \resumeItem{Rebo: Bike Camera}
@@ -165,7 +164,7 @@
         \resumeItem{Battery Management Algorithms}
           {I wrote the algorithms for battery management, including State-of-Charge estimation, overvoltage/undervoltage protection, overcharge protection.}
         \resumeItem{Data Visualisation}
-          {Created visualisation dashboards of data from the camera product that was deployed to the customer, for performance analysis and fault detection.}
+          {Created visualisation dashboards of data from the camera product, for performance analysis and fault detection.}
         \resumeItem{Video Processing}
           {Created scripts to cut, splice and watermark videos captured on the camera.}
       \resumeItemListEnd
@@ -177,7 +176,7 @@
 \section{Projects}
   \resumeSubHeadingListStart
     \resumeSubItem{Round-the-world Balloon project}
-      {Led a team to fly a small hydrogen balloon around the world on the Jet stream. Longest flight was for 22 days, flying over Japan, Canada, America and Euro­pe. The tracker we designed was powered by solar, and transmited position fixes via radio(LoRaWAN) to gateways worldwide(launch report).}
+      {Led a team to fly a small hydrogen balloon around the world on the Jet stream. Longest flight was for 22 days, flying over Japan, Canada, America and Euro­pe. The tracker we designed was powered by solar, and transmited position fixes via radio(LoRaWAN) to gateways worldwide(\href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{launch report}).}
   \resumeSubHeadingListEnd
 
 
@@ -189,6 +188,12 @@
      \hfill
      \textbf{Technologies}{: Docker, Git, Linux}
    }
+
+   \item{
+    \textbf{Visualisation tools}{: Grafana, Seaborn, Plotly}
+    \hfill
+    \textbf{Databases}{: Mongodb, InfluxDB}
+  }
  \resumeSubHeadingListEnd
 
 
