--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -130,7 +130,7 @@
       {Founder}{Sep 2021 - Nov 2021}
       \resumeItemListStart
         \resumeItem{Crypto Lending}
-          {Founded a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers(\href{https://github.com/Ashburton-Finance/flash-aggregator}{Github})}
+          {Founded a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers(\href{https://github.com/Ashburton-Finance/flash-aggregator}{Github link})}
         \resumeItem{Smart Contracts/Blockchain}
           {Developed product on the Solana blockchain, using the latest tooling(Smart Contracts, Typescript/Rust programming, Anchor framework).}
       \resumeItemListEnd
@@ -142,7 +142,7 @@
         \resumeItem{Electric Bike Development}
           {I worked in a team to develop a high performance, innovative electric bicycle.}
         \resumeItem{PCB Design}
-          {I created an ESP32 based datalogger logging all relevant parameters from a moving E-bike. This required PCB design/board bring-up.}
+          {I created an ESP32 based datalogger logging all relevant parameters from a moving E-bike.}
         \resumeItem{Data Visualisation}
           {Created visualisation dashboards of performance data from the product using Influxdb/Grafana.}
         \resumeItem{Embedded Software}
@@ -150,7 +150,7 @@
         \resumeItem{Battery Pack Design}
           {Designed custom battery packs and tested their performance, especially thermal characteristics.}
         \resumeItem{Energy Consumption Algorithms}
-          {Developed further algorithms for precisely predicting how much energy an electric bike will consume}
+          {Developed algorithms for precisely predicting how much energy an electric bike will consume.}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -166,7 +166,7 @@
         \resumeItem{Data Visualisation}
           {Created visualisation dashboards of data from the camera product, for performance analysis and fault detection.}
         \resumeItem{Video Processing}
-          {Created scripts to cut, splice and watermark videos captured on the camera.}
+          {Created scripts to cut, splice and watermark videos captured on the product.}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -183,17 +183,14 @@
 %--------PROGRAMMING SKILLS------------
 \section{Programming Skills}
  \resumeSubHeadingListStart
-   \item{
-     \textbf{Languages}{: Python, C, C++, Java, Rust, Typescript}
-     \hfill
-     \textbf{Technologies}{: Docker, Git, Linux}
-   }
-
-   \item{
-    \textbf{Visualisation tools}{: Grafana, Seaborn, Plotly}
-    \hfill
-    \textbf{Databases}{: Mongodb, InfluxDB}
-  }
+   \resumeSubItem{Languages}
+    {Python, C, C++, Java, Rust, Typescript}
+    \resumeSubItem{Technologies}
+      {Docker, Git, Linux}
+    \resumeSubItem{Visualisation tools}
+      {Grafana, Seaborn, Plotly}
+    \resumeSubItem{Databases}
+      {MongoDB, InfluxDB}
  \resumeSubHeadingListEnd
 
 
