--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -142,11 +142,11 @@
         \resumeItem{Electric Bike Development}
           {I worked in a team to develop a high performance, innovative electric bicycle.}
         \resumeItem{PCB Design}
-          {I created an ESP32 based datalogger logging all relevant parameters from a moving E-bike.}
+          {Created an ESP32 based datalogger logging all relevant parameters from a moving E-bike.}
         \resumeItem{Data Visualisation}
           {Created visualisation dashboards of performance data from the product using Influxdb/Grafana.}
         \resumeItem{Embedded Software}
-          {I wrote the software for datalogger, running FreeRTOS for scheduling and interfacing with several sensors.}
+          {Wrote the software for datalogger, running FreeRTOS for scheduling and interfacing with several sensors.}
         \resumeItem{Battery Pack Design}
           {Designed custom battery packs and tested their performance, especially thermal characteristics.}
         \resumeItem{Energy Consumption Algorithms}
@@ -162,7 +162,7 @@
         \resumeItem{Embedded Software}
           {Wrote the software for the camera product, on 2 processors(Vision and Battery management). Code was written in C and in Python. Processors: Broadcom SoC and Attiny MCU.}
         \resumeItem{Battery Management Algorithms}
-          {I wrote the algorithms for battery management, including State-of-Charge estimation, overvoltage/undervoltage protection, overcharge protection.}
+          {Wrote the algorithms for battery management, including State-of-Charge estimation, overvoltage/undervoltage protection, overcharge protection.}
         \resumeItem{Data Visualisation}
           {Created visualisation dashboards of data from the camera product, for performance analysis and fault detection.}
         \resumeItem{Video Processing}
