--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -144,7 +144,7 @@
         \resumeItem{PCB Design}
           {Created an ESP32 based datalogger logging all relevant parameters from a moving E-bike.}
         \resumeItem{Data Visualisation}
-          {Created visualisation dashboards of performance data from the product using Influxdb/Grafana.}
+          {Created visualisation dashboards of performance data from the product using InfluxDB/Grafana.}
         \resumeItem{Embedded Software}
           {Wrote the software for datalogger, running FreeRTOS for scheduling and interfacing with several sensors.}
         \resumeItem{Battery Pack Design}
