Jackson review points

--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -140,7 +140,7 @@
       {Embedded Hardware/Software Engineer Intern}{June 2021 - Sep 2021}
       \resumeItemListStart
         \resumeItem{Electric Bike Development}
-          {I worked in a team to develop a high performance, innovative electric bicycle.}
+          {Worked in a team to develop a high performance, innovative electric bicycle.}
         \resumeItem{PCB Design}
           {Created an ESP32 based datalogger logging all relevant parameters from a moving E-bike.}
         \resumeItem{Data Visualisation}
@@ -160,7 +160,7 @@
         \resumeItem{Rebo: Bike Camera}
           {Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware for device and web interface(Django/Python).}
         \resumeItem{Embedded Software}
-          {Wrote the software for the camera product, on 2 processors(Vision and Battery management). Code was written in C and in Python. Processors: Broadcom SoC and Attiny MCU.}
+          {Worked on software architecture, implementation of software for the product, on 2 processors(Vision and Battery management). Code was written in C and in Python. Processors: Broadcom SoC and Attiny MCU.}
         \resumeItem{Battery Management Algorithms}
           {Wrote the algorithms for battery management, including State-of-Charge estimation, overvoltage/undervoltage protection, overcharge protection.}
         \resumeItem{Data Visualisation}
