--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -122,7 +122,7 @@
       {Graduate Software Engineer}{Feb 2022 - Present}
       \resumeItemListStart
         \resumeItem{Bluetooth Low Energy}
-          {Bluetooth Low Energy(BLE) is a low power communication protocol for connected devices. I write software running on Dyson products that communicate over Bluetooth LE.}
+          {Bluetooth Low Energy(BLE) is a low power communication protocol for connected devices. Currently write software running on Dyson products that communicate over Bluetooth LE.}
       \resumeItemListEnd
   
     \resumeSubheading
