Looks like update

--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -121,6 +121,8 @@
       {Dyson}{Hullavington, UK}
       {Graduate Software Engineer}{Feb 2022 - Present}
       \resumeItemListStart
+        \resumeItem{Cloud Data Management}
+          {Developed software for message passing pipeline for millions of devices using AWS. Using severless architecture}
         \resumeItem{Bluetooth Low Energy}
           {Bluetooth Low Energy(BLE) is a low power communication protocol for connected devices. Currently write software running on Dyson products that communicate over Bluetooth LE.}
       \resumeItemListEnd
