--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -93,7 +93,7 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\href{https://medadnewman.co.uk/}{\Large Medad Newman}} & Email : \href{mailto:medad@medadnewman.co.uk}{medad@medadnewman.co.uk}\\
+  \textbf{\href{https://medadnewman.co.uk/}{\Large Medad Rufus Newman(call me Rufus)}} & Email : \href{mailto:medad@medadnewman.co.uk}{medad@medadnewman.co.uk}\\
   \href{https://medadnewman.co.uk/}{https://medadnewman.co.uk} & Mobile : +44 7435651280 \\
 \end{tabular*}
 
