--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -148,7 +148,7 @@
         \resumeItem{Data Visualisation}
           {Created visualisation dashboards of performance data from the product using InfluxDB/Grafana.}
         \resumeItem{Embedded Software}
-          {Wrote the software for datalogger, running FreeRTOS for scheduling and interfacing with several sensors.}
+          {Implemented software for datalogger, running FreeRTOS for scheduling and interfacing with several sensors.}
         \resumeItem{Battery Pack Design}
           {Designed custom battery packs and tested their performance, especially thermal characteristics.}
         \resumeItem{Energy Consumption Algorithms}
@@ -162,11 +162,11 @@
         \resumeItem{Rebo: Bike Camera}
           {Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware for device and web interface(Django/Python).}
         \resumeItem{Embedded Software}
-          {Worked on software architecture, implementation of software for the product, on 2 processors(Vision and Battery management). Code was written in C and in Python. Processors: Broadcom SoC and Attiny MCU.}
+          {Worked on software architecture, implementation of software for the product, on 2 processors(Vision and Battery management). Code was written in C and in Python. Processors: Broadcom SoC and Atmel MCU.}
         \resumeItem{Battery Management Algorithms}
           {Wrote the algorithms for battery management, including State-of-Charge estimation, overvoltage/undervoltage protection, overcharge protection.}
         \resumeItem{Data Visualisation}
-          {Created visualisation dashboards of data from the camera product, for performance analysis and fault detection.}
+          {Created visualisation dashboards in Plotly of data, for performance analysis and fault detection.}
         \resumeItem{Video Processing}
           {Created scripts to cut, splice and watermark videos captured on the product.}
       \resumeItemListEnd
