--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -124,7 +124,11 @@
         \resumeItem{Cloud Data Management}
           {Developed software for message passing pipeline for millions of devices using AWS. Using severless architecture}
         \resumeItem{Bluetooth Low Energy}
-          {Bluetooth Low Energy(BLE) is a low power communication protocol for connected devices. Currently write software running on Dyson products that communicate over Bluetooth LE.}
+          {Develop Bluetooth Low Energy(BLE) software for connectivity. Written in C and Python}
+        \resumeItem{Embedded Unittesting}
+          {Develop Bluetooth Low Energy(BLE) software for connectivity. Written in C and Python}
+
+
       \resumeItemListEnd
   
     \resumeSubheading
