--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -102,7 +102,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Imperial College London}{London, UK}
-      {Masters in Design Engineering;  2:1 grade}{Sep. 2017 -- June. 2021}
+      {Masters in Design Engineering}{Sep. 2017 -- June. 2021}
       \resumeItemListStart
         \resumeItem{Subjects: Mechanics, Electronics, Algorithms \& Data Structures, Optimisation, Robotics, Human-Centred Design, Industrial Design and Business Strategy.}
         \resumeItem{Thesis on predicting E-bike energy consumption with machine learning.}
