drop programming word

--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -127,7 +127,7 @@
       {Founder}{Sep 2021 - Nov 2021}
       \resumeItemListStart
         \resumeItem{Founded a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers(\href{https://github.com/Ashburton-Finance/flash-aggregator}{Github link})}
-        \resumeItem{Developed product on the Solana blockchain, using the latest tooling: Smart Contracts, Typescript/Rust programming, Anchor framework.}
+        \resumeItem{Developed product on the Solana blockchain, using the latest tooling: Smart Contracts, Typescript/Rust, Anchor framework.}
       \resumeItemListEnd
   
     \resumeSubheading
