--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -118,8 +118,8 @@
       {Dyson}{Hullavington, UK}
       {Graduate Software Engineer}{Feb 2022 - Present}
       \resumeItemListStart
-        \resumeItem{Developed Bluetooth Low Energy(BLE) software for connectivity. Written in C/Python}
-        \resumeItem{Implement embedded firmware unit testing using the Ceedling framework (Unit \& CMock)}
+        \resumeItem{Developed Bluetooth Low Energy(BLE) software for connectivity. Written in C and Python}
+        \resumeItem{Implement embedded firmware unit testing using the Ceedling framework (Unity \& CMock)}
       \resumeItemListEnd
   
     \resumeSubheading
