--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -165,7 +165,7 @@
 
 
 %--------PROGRAMMING SKILLS------------
-\section{Programming Skills}
+\section{Programming Languages/Technologies}
  \resumeSubHeadingListStart
    \resumeSubItem{Languages}
     {Python, C, C++, Java, Rust, Typescript}
