--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -147,7 +147,7 @@
       {Design Engineer Intern}{May 2020 - Sep 2020}
       \resumeItemListStart
         \resumeItem{Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware for device and web interface(Django/Python).}
-        \resumeItem{Worked on Embedded Software for the product, on 2 processors(Vision and Battery management). Code was written in C and Python. Processors: Broadcom SoC and Atmel MCU.}
+        \resumeItem{Worked on Embedded Software for the product, on 2 processors(Vision and Battery management). Code was written in C and Python. Processors: Broadcom SoC \& Atmel MCU.}
         \resumeItem{Wrote the algorithms for battery management, including state-of-charge estimation, overvoltage/undervoltage protection, overcharge protection.}
         \resumeItem{Created visualisation dashboards in Plotly of data, for performance analysis and fault detection.}
         \resumeItem{Created scripts to cut, splice and watermark videos captured on the product.}
