--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -159,7 +159,7 @@
 %-----------PROJECTS-----------------
 \section{Projects}
   \resumeSubHeadingListStart
-    \resumeSubItem{Round-the-world Balloon project}
+    \resumeSubItem{}
       {Led a team to fly a small hydrogen balloon around the world on the Jet stream. Longest flight was for 22 days, flying over Japan, Canada, America and Euro­pe. The tracker we designed was powered by solar, and transmited position fixes via radio(LoRaWAN) to gateways worldwide(\href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{launch report}).}
   \resumeSubHeadingListEnd
 
@@ -167,13 +167,13 @@
 %--------PROGRAMMING SKILLS------------
 \section{Programming Languages/Technologies}
  \resumeSubHeadingListStart
-   \resumeSubItem{Languages}
+   \resumeSubItem{Languages: }
     {Python, C, C++, Java, Rust, Typescript}
-    \resumeSubItem{Technologies}
+    \resumeSubItem{Technologies: }
       {Docker, Git, Linux}
-    \resumeSubItem{Visualisation tools}
+    \resumeSubItem{Visualisation tools: }
       {Grafana, Seaborn, Plotly}
-    \resumeSubItem{Databases}
+    \resumeSubItem{Databases: }
       {MongoDB, InfluxDB}
  \resumeSubHeadingListEnd
 
