--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -120,6 +120,7 @@
       \resumeItemListStart
         \resumeItem{Developed Bluetooth Low Energy(BLE) software for connectivity in C and Python}
         \resumeItem{Implement embedded firmware unit testing using the Ceedling framework (Unity \& CMock)}
+        \resumeItem{Documenting system architecture and software use instructions}
       \resumeItemListEnd
   
     \resumeSubheading
@@ -149,7 +150,7 @@
         \resumeItem{Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware for device and web interface(Django/Python).}
         \resumeItem{Worked on Embedded Software for the product, on 2 processors(Vision and Battery management). Written in C and Python. Processors: Broadcom SoC \& Atmel MCU.}
         \resumeItem{Wrote the algorithms for battery management, including state-of-charge estimation, overvoltage/undervoltage protection, overcharge protection.}
-        \resumeItem{Created visualisation dashboards in Plotly of data, for performance analysis and fault detection.}
+        \resumeItem{Created data visualisation dashboards in Plotly, for performance analysis and fault detection.}
         \resumeItem{Created scripts to cut, splice and watermark videos captured on the product.}
       \resumeItemListEnd
 
