--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -118,7 +118,7 @@
       {Dyson}{Hullavington, UK}
       {Graduate Software Engineer}{Feb 2022 - Present}
       \resumeItemListStart
-        \resumeItem{Developed Bluetooth Low Energy(BLE) software for connectivity in C and Python}
+        \resumeItem{Developing Bluetooth Low Energy(BLE) software for connectivity in C and Python}
         \resumeItem{Implement embedded firmware unit testing using the Ceedling framework (Unity \& CMock)}
         \resumeItem{Documenting system architecture and software use instructions}
       \resumeItemListEnd
@@ -128,7 +128,7 @@
       {Founder}{Sep 2021 - Nov 2021}
       \resumeItemListStart
         \resumeItem{Founded a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers(\href{https://github.com/Ashburton-Finance/flash-aggregator}{Github link})}
-        \resumeItem{Developed product on the Solana blockchain, using the latest tooling: Smart Contracts, Typescript \& Rust, Anchor framework.}
+        \resumeItem{Developed product on the Solana blockchain, using Smart Contracts, Typescript \& Rust, Anchor framework.}
       \resumeItemListEnd
   
     \resumeSubheading
